<resources>
    <string name="app_name">BloodBank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blood_bank">Blood</string>
    <string name="bank">Bank</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="next">next</string>
    <string name="search_blood_donor">Search Blood Donor</string>
    <string name="search_for_blood_donor_in_just_few_laps_of_create_custom_search">search for blood donor in just few Laps of create custom search</string>
    <string name="it_is_easy_to_donate_blood_to_the_community_family_and_friends">It is easy to donate blood to the community family and friends</string>
    <string name="your_blood_can_save_live">Your Blood Can Save Live</string>
    <string name="finish">Finish</string>
    <string name="your_blood_pack_can_save_someone_life_your_blood_pack_is_very_important">your blood pack can save someone life your blood pack is very important</string>
    <string name="facebook">Sign in Facebook</string>
    <string name="google">Sign in Google</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">we will send you an one time password on this mobile number</string>
    <string name="otpverification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp"><u>RESEND OTP</u></string>
    <string name="verify">VERIFY</string>


    <string name="facebook_app_id">3423258081220649</string>
    <string name="fb_login_protocol_scheme">fb3423258081220649</string>
    <string name="facebook_client_token">4e39fe6958e8af9414f75a04eca54217</string>
    <string name="login_register"><![CDATA[LOGIN & REGISTER]]></string>
    <string name="become_donor">Become Donor</string>
    <string name="gender">Gender</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>

    <string-array name="egypt_governates">
        <item>Cairo</item>
        <item>Aswan</item>
        <item>Alexandria</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Dakahlia</item>
        <item>Red Sea</item>
        <item>Dakahlia</item>
        <item>Qena</item>
        <item>Port Said</item>
        <item>North Sinai</item>
        <item>New Valley</item>
        <item>Monufia</item>
        <item>Minya</item>
        <item>Matruh</item>
        <item>Luxor</item>
        <item>Kafr El Sheikh</item>
        <item>Ismailia</item>
        <item>Giza</item>
        <item>Gharbia</item>
        <item>Faiyum</item>
        <item>Damietta</item>
        <item>Sharqia</item>
        <item>Suez</item>
        <item>Sohag</item>
        <item>South Sinai</item>
    </string-array>

</resources>