<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".presentation.intro.onboarding.screens.SecondScreen">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/splashtwo"
            app:lottie_url="REPLACE_JSON_URL" />

        <TextView
            android:id="@+id/donateBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="216dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/roboto_bold"
            android:paddingStart="50dp"
            android:paddingTop="12dp"
            android:paddingEnd="50dp"
            android:paddingBottom="12dp"
            android:text="@string/search_blood_donor"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="330dp"
            android:layout_height="53dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/search_for_blood_donor_in_just_few_laps_of_create_custom_search"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/donateBlood"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/donateBlood"
            app:layout_constraintTop_toBottomOf="@+id/donateBlood" />

        <TextView
            android:id="@+id/secondScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_background_white"
            android:drawableRight="@drawable/arrow_ic"
            android:fontFamily="@font/roboto_bold"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="15dp"
            android:paddingBottom="8dp"
            android:text="@string/next"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>