<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verify_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.intro.regestration.sgininwithphonenumber.VerifyMobileNumberScreen">


        <ImageView
            android:id="@+id/verify_screen_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify_screen_back_btn"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/otp"
            app:lottie_url="REPLACE_JSON_URL" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView" />

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/number_ed_background"
            android:ems="10"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_otp_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/otb_button_background"
            android:fontFamily="@font/roboto_bold"
            android:padding="15dp"
            android:text="Get OTP"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_input"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_input" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/number_ed_background"
            android:ems="10"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:inputType="numberSigned"
            android:padding="15dp"
            android:text="+20"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/phone_number_input"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="325dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>